# svgm

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  README.md.eex  mix.exs
.github/workflows/: release.yml
lib/: svgm.ex
lib/mix/tasks/svgm/: cargo.ex  clean.ex  fix_beams.ex  readme.ex
lib/svgm/: exceptions.ex  native.ex  options.ex
native/svgm_native/: Cargo.toml
native/svgm_native/src/: lib.rs
test/: mx_tasks_svgm_test.exs  svgm_bench.exs  svgm_test.exs
test/svgm_test/: helpers.ex
