[package]
name = "svgm_native"
version = "0.3.7"
authors = []
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
rustler = "0.37.3"
svgm-core = "0.3.7"

[features]
default = ["nif_version_2_15"]

# Feature necessary for Rustler Precompiled.
nif_version_2_15 = ["rustler/nif_version_2_15"]
